book summary modal now wraps so that form shows correctly in mobile

--- a/client/src/components/BookSummary/BookSummary.css
+++ b/client/src/components/BookSummary/BookSummary.css
@@ -1,5 +1,7 @@
 .BookSummary {
   display: flex;
+  flex-flow: row wrap;
+  align-content: flex-start;
 }
 
 .BookSummary .Book {
